--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="/image-modified.png" alt="ProfilePhoto" height="150" width="150"></td>
+            <td><img src="image-modified.png" alt="ProfilePhoto" height="150" width="150"></td>
             <td><h1>Aditya Deokar</h1>
                 <p><em>Founder and CEO of <strong>the adidas</strong>.</em></p>
                 <p>I am a iOS and Web Developer. i love coffee and brew my own beers.</p>
