--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li>The complete Web Development Bootcamp</li>
     </ul>
     <hr>
-    <h3>Words and Experience</h3>
+    <h3>Works and Experience</h3>
     <table  cellspacing="20">
         <tr>
             <td>2010-13</td>
