--- a/Hobbies.html
+++ b/Hobbies.html
@@ -10,7 +10,7 @@
     <h1>Hobbies</h1>
     <ul>
         <li>Cricket</li>
-        <li>Summing</li>
+        <li>Swimming</li>
         <li>Reading</li>
     </ul>
 </body>
